--- a/DessertRate.csproj
+++ b/DessertRate.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ApprenticeFoundryRulesAndUnits" Version="1.3.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" PrivateAssets="all" />
+    <PackageReference Include="Octokit" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
